--- a/ios/demo2/Info.plist
+++ b/ios/demo2/Info.plist
@@ -32,6 +32,16 @@
 				<string>https</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>bla</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>bla</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
